2010-04-14 Markus Malkusch <markus@malkusch.de>

    * classes/index/AutoloaderIndex_File.php (AutoloaderIndex_File):
    AutoloaderIndex_SerializedHashtable derives from AutoloaderIndex_File.
    This makes it easier to write a new Index implementation which uses
    an index file.

    * classes/index/AutoloaderIndex_PHPArrayCode.php (AutoloaderIndex_PHPArrayCode):
    Index implementation which produces a human readable file in PHP,
    which produces an array.

    * classes/index/AutoloaderIndex_IniFile.php (AutoloaderIndex_IniFile):
    Index implementation which produces a human readable file with an array
    in a PHP ini file style.

2010-04-10 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::__autoload()):
    The search process is divided into first iterating through all indexes and
    then searching each path in the filesystem. This prevents in a multi
    Autoloader environment that before the index of a later Autoloader would
    be used the previous Autoloader would vainly search their class paths.

    * classes/index/AutoloaderIndex.php (AutoloaderIndex::getPaths()):
    For debuging the index has to return an indexed array with its indexed
    paths.

2010-01-09 Markus Malkusch <markus@malkusch.de>

    * classes/fileIterator/AutoloaderFileIterator_PriorityList.php (AutoloaderFileIterator_PriorityList):
    The AutoloaderFileIterator_PriorityList prefers *.inc and *.php files.
    Additionally the prefered files are ordered by the Levenshtein distance to the
    class name. This is the default iterator.
    
    * classes/fileIterator/AutoloaderFileIterator_SimpleCached.php (AutoloaderFileIterator_SimpleCached):
    Once a AutoloaderFileIterator_Simple is completely iterated the found
    files are cached in an ArrayIterator.
       
    * classes/Autoloader.php (Autoloader::setPath()):
    Autoloader::setPath() became private. The path is only set by the constructor.